{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "8529103f-77fc-433e-9364-85bd0ddba3d2",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "c541907c-27fc-482f-82ec-ec2c0cc77dc3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DragPosition",
                    "type": "Value",
                    "id": "d036e681-9e4a-4bf0-8f69-b60aeb9cf08e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ZoomMouse",
                    "type": "Value",
                    "id": "b2d1d8e3-8d6c-4b99-aa87-d347a99629b2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DragButton",
                    "type": "Button",
                    "id": "f8870c7a-cf6e-4d7b-9c1b-36b80b3fc8ce",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d09302ad-cf84-4305-8d5d-44a2afb5228c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2cacccb-ea70-4e32-a93b-6286c002cdd4",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2243fa37-192b-413d-8388-5e318a0edab0",
                    "path": "<Mouse>/position",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "DragPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "338422a7-c9e0-4de8-9bb8-b39053535946",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "DragPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02c046a5-e62e-4cba-bf61-dc0c35a4da17",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61b76fc8-4741-45a6-b9cf-99cb9688127c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}